<resources>
    <string name="app_name">猫歩き</string>
    <string name="title_home">今日の歩数</string>
    <string name="title_dashboard">記録</string>
    <string name="title_notifications">猫部屋</string>
    <string name="title_activity_todays_step">TodaysStepActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">設定</string>
    <string name="action_history">履歴</string>
    <string name="action_weather">今日の天気</string>

    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>

    <string name="zero">0</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="demo_data_supplement">デモデータを表示しています</string>
    <string name="demo_data_howtochange">設定　⇨　デモデータから変更できます。</string>

    <string name="decide_goal">1日、1ヶ月の目標を決めましょう！</string>

    <string name="error_message">表示できません。</string>

    <!-- Preference Titles -->
    <string name="goal_header">目標</string>
    <string name="cat_header">猫</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- goal Preferences -->
    <string name="dailyGoal">1日の目標</string>
    <string name="weeklyGoal">１週間の目標</string>
    <string name="monthlyGoal">１ヶ月の目標</string>


    <!-- Sync Preferences -->
    <string name="more_cat">猫をふやす</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">DUMMY\nCONTENT</string>
    <string name="_0">0</string>
    <string name="no_having_past_data">過去のデータがありません。</string>
    <string name="srash">/</string>
    <string name="_20000_40000">20000 / 40000</string>
    <string name="_1977_8">1977 8(デモデータ)</string>
    <string name="_1999_7">1999 7</string>
    <string name="_15000_40000">15000 / 40000</string>
    <string name="_37_5">37.5%</string>
    <string name="_50">50%</string>
    <string name="_1999_12">1999 1(デモデータ）</string>
    <string name="history">履歴</string>
    <string name="step">Step</string>
    <string name="changeCat">猫をかえる</string>

</resources>