<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/goal_header">

        <EditTextPreference
            app:key="dailyGoal"
            app:title="@string/dailyGoal"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="20000"
            />

        <EditTextPreference
            app:key="monthlyGoal"
            app:title="@string/monthlyGoal"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="300000"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_header">

        <SwitchPreferenceCompat
            app:key="changeCat"
            app:title="@string/changeCat"
            android:defaultValue="false"/>
    </PreferenceCategory>


    <PreferenceCategory >
        <SwitchPreferenceCompat
            app:key="demoData"
            app:title="デモデータ"
            android:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>