<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="stepCountviewModel"
            type="com.hamu.walkforcats.viewmodels.StepCountViewmodel"/>
        <variable
            name="historyviewModel"
            type="com.hamu.walkforcats.viewmodels.HistoryViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraitLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.stepCount.StepCountFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.hamu.walkforcats.ui.history.ItemFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="36dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:context=".ui.history.HistoryFragment"
            tools:listitem="@layout/fragment_item" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/monthlyCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="112dp"
                    android:text="@{stepCountviewModel.monthlyCount}"
                    android:textSize="34sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/Year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="67dp"
                    app:formatYearandMonth="@{historyviewModel.dt}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/monthlyGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="172dp"
                    android:layout_marginTop="112dp"
                    android:textSize="34sp"
                    app:changeToString="@{stepCountviewModel.monthlyGoal}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="174dp"
                    android:text="@{stepCountviewModel.monthlyPercent}"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/blackcat" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:text="@string/srash"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/monthlyGoal"
                    app:layout_constraintHorizontal_bias="0.833"
                    app:layout_constraintStart_toEndOf="@+id/monthlyCount"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pastData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/noHavingPastData"
            app:changeViewVisible="@{historyviewModel.isDataExist()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/exampleCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="195dp"
            android:orientation="horizontal"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            app:changeViewVisible="@{historyviewModel.isDataExist()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1977_8"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="43dp"
                    tools:layout_editor_absoluteX="27dp"
                    tools:layout_editor_absoluteY="448dp" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20000_40000"
                    android:textSize="20sp"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="40dp"
                    tools:layout_editor_absoluteX="27dp"
                    tools:layout_editor_absoluteY="468dp" />

                <TextView
                    android:id="@+id/examplePercent2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_50" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exampleCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="280dp"
            android:orientation="horizontal"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            app:changeViewVisible="@{historyviewModel.isDataExist()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/content1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1999_12"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/year1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15000_40000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/examplePercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_37_5" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>